objects/ssot__ProductPackagingUnit__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HasOrderAbility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Order Ability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Product Packaging Unit Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsConsumerPackagingUnit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Consumer Packaging Unit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsOrderUnit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Order Unit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsPriceUnit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Price Unit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__PackagingUnitType__c</fullName>
        <label>Packaging Unit Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PiecesPerParentPackagingUnitCount__c</fullName>
        <label>Pieces Per Parent Packaging Unit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PiecesPerSmallestPackagingUnitCount__c</fullName>
        <label>Pieces Per Smallest Packaging Unit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ProductId__c</fullName>
        <label>Product</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>